検索アイコンから部品詳細表示までの書影を実装

--- a/work/public/css/mypage.css
+++ b/work/public/css/mypage.css
@@ -28,6 +28,10 @@ img
 {
   background-color:rgb(172, 230, 155);
 }
+.bg4
+{
+  background-color:rgb(155, 174, 230);
+}
 
 .form-signin {
   max-width: 600px;
